string shortener + wrong digit message

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -3,10 +3,11 @@ body{
 }
 #drawing{
     margin: 10px;
+    width: 300px;
 }
 #re-render{
     margin: 10px;
 }
 #prediction-container{
-    margin: 10px;
+
 }
